Overflow styles fixed for audioVideo component.

--- a/src/styles/components/_audiovideo.scss
+++ b/src/styles/components/_audiovideo.scss
@@ -161,6 +161,5 @@ right:520px;
 @media only screen and (max-width:590px) {
 	#audiovideo {
 		right:0px;
-		z-index:12;
 	}
 }
