--- a/src/styles/components/_webrtc.scss
+++ b/src/styles/components/_webrtc.scss
@@ -80,7 +80,7 @@ transition-duration: 0.5s;
 }
 #localVideo {
 width: 100%;
-height: 100%;
+max-height: 100%;
 opacity: 0;
 transition-property: opacity;
 -webkit-transition-property: opacity;
@@ -88,6 +88,7 @@ transition-duration: 2s;
 -webkit-transition-duration: 2s;
 background: rgba(0,0,0,0.4);
 /*background: red;*/
+display:block;
 }
 #remoteVideos {
 position:absolute;
@@ -105,10 +106,12 @@ transition-duration: 2s;
 #remoteVideos video {
 width:100%;
 height:100%;
+display:block;
 }
 #miniVideo {
 max-height: 100%;
 max-width:100%;
+display:block;
 }
 .remoteVideo {
 display: inline-block;
@@ -118,6 +121,7 @@ vertical-align:bottom;
 position:relative;
 visibility:hidden;
 background: rgba(0,0,0,0.4);
+overflow:hidden;
 }
 .remoteVideo.withvideo {
 visibility:visible;
